Ensure DHTMLX table tooltip doesn't hide behind overlays

--- a/src/css/general/field.css
+++ b/src/css/general/field.css
@@ -92,6 +92,10 @@
     z-index: 1600 !important;
 }
 
+.dhx_tooltip {
+    z-index: 9999 !important;
+}
+
 /* End Select input styling */
 
 /* Summary Card Styling */
